--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <title>Expanse Tracker</title>
+        <link rel="icon" type="image/png" href="budge.png">
     </head>
     <body>
         <div class="container">
